Cycles Point Density Render Issues #47387

Closed
opened 2016-02-11 01:02:01 +01:00 by Matt Heimlich · 5 comments

System Information
Win7 x64

Blender Version
Broken: da7ddb6

Short description of error
Rendering point density in Cycles is either broken or very unintuitive. A bounding box object with applied scales combined with a point density cloud made up of vertices with applied scale renders incorrectly with both Object Space and World Space selected in the Point Density node. By scaling one or the other and through some combination of applying/not applying and messing with the Space parameter I've managed to stumble across settings that "work", but following the same steps again never seems to create the same result as the previous time.

Exact steps for others to reproduce the error
Open file and render. Switch from World Space to Object Space and vice versa. Play with scales. Etc. Doesn't seem to work as expected at all.

PCViewport.JPG
Point cloud as seen in viewport

PCObjectSpace.JPG
Rendered point cloud in Object Space (Points stretched and scattered where they shouldn't be)

PCWorldSpace.JPG
Rendered point cloud in World Space (Points constrained to a tiny box that seems to have no relation to anything in the scene at all)

PointDensityBug.blend

**System Information** Win7 x64 **Blender Version** Broken: da7ddb6 **Short description of error** Rendering point density in Cycles is either broken or very unintuitive. A bounding box object with applied scales combined with a point density cloud made up of vertices with applied scale renders incorrectly with both Object Space and World Space selected in the Point Density node. By scaling one or the other and through some combination of applying/not applying and messing with the Space parameter I've managed to stumble across settings that "work", but following the same steps again never seems to create the same result as the previous time. **Exact steps for others to reproduce the error** Open file and render. Switch from World Space to Object Space and vice versa. Play with scales. Etc. Doesn't seem to work as expected at all. ![PCViewport.JPG](https://archive.blender.org/developer/F281981/PCViewport.JPG) Point cloud as seen in viewport ![PCObjectSpace.JPG](https://archive.blender.org/developer/F281983/PCObjectSpace.JPG) Rendered point cloud in Object Space (Points stretched and scattered where they shouldn't be) ![PCWorldSpace.JPG](https://archive.blender.org/developer/F281985/PCWorldSpace.JPG) Rendered point cloud in World Space (Points constrained to a tiny box that seems to have no relation to anything in the scene at all) [PointDensityBug.blend](https://archive.blender.org/developer/F281987/PointDensityBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Matt Heimlich 2016-02-11 01:02:01 +01:00
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich
Author

Note that this seems to be constrained only to using Object Vertices. Particle System mode appears to render as expected.

Note that this seems to be constrained only to using Object Vertices. Particle System mode appears to render as expected.

This issue was referenced by 1d0e084834

This issue was referenced by 1d0e08483495f0acaf62a93bcb45de94f530a58b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47387
No description provided.