Fix T47387: Cycles Point Density Render Issues